--- a/wercker.yml
+++ b/wercker.yml
@@ -93,7 +93,38 @@ push-release:
       tag: release-$WERCKER_GIT_COMMIT
       cmd: nginx -g 'daemon off;'
 
-kube-deploy:
+kube-deploy-debug:
+  steps:
+    - script:
+      name: generate kube file
+      cwd: deployment
+      code: |
+        cat todo-service.yml >> todo-kube-debug.yml
+        ./t.sh todo-deployment.template.yml >> todo-kube-debug.yml
+        cat todo-kube.yml
+
+    - kubectl:
+      cwd: deployment
+      server: $KUBERNETES_MASTER
+      username: $KUBERNETES_USERNAME
+      password: $KUBERNETES_PASSWORD
+      insecure-skip-tls-verify: true
+      command: create namespace $WERCKER_GIT_BRANCH
+
+    - kubectl:
+      cwd: deployment
+      server: $KUBERNETES_MASTER
+      username: $KUBERNETES_USERNAME
+      password: $KUBERNETES_PASSWORD
+      insecure-skip-tls-verify: true
+      command: apply -f todo-kube-debug.yml
+
+    - script:
+      name: cleanup
+      cwd: deployment
+      code: rm -rf ca.pem admin.pem admin-key.pem todo-kube-debug.yml
+
+kube-deploy-production:
   steps:
     - script:
       name: generate kube file
@@ -102,6 +133,14 @@ kube-deploy:
         cat todo-service.yml >> todo-kube.yml
         ./t.sh todo-deployment.template.yml >> todo-kube.yml
         cat todo-kube.yml
+    
+    - kubectl:
+      cwd: deployment
+      server: $KUBERNETES_MASTER
+      username: $KUBERNETES_USERNAME
+      password: $KUBERNETES_PASSWORD
+      insecure-skip-tls-verify: true
+      command: create namespace $WERCKER_GIT_BRANCH
 
     - kubectl:
       cwd: deployment
