--- a/deployment/todo-service.yml
+++ b/deployment/todo-service.yml
@@ -5,7 +5,7 @@ metadata:
   name: todo
   labels:
     name: todo
-  namespace: $WERCKER_GIT_BRANCH
+  namespace: ${TPL_ENVIRONMENT}
 spec:
   ports:
     - port: 80
