--- a/deployment/todo-service.yml
+++ b/deployment/todo-service.yml
@@ -8,8 +8,25 @@ metadata:
   namespace: ${TPL_ENVIRONMENT}
 spec:
   ports:
-    - port: 80
-      targetPort: http-server
+    - port: 8000
+      targetPort: 8000
       protocol: TCP
   selector:
     name: todo
+
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: todo
+  labels:
+    name: todo
+  namespace: ${TPL_ENVIRONMENT}
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /
+            backend:
+              serviceName: todo
+              servicePort: 8000
